src/app/components/navbar/navbar.component.scss
:host {
  display: flex;
  height: 65px;
  align-items: center;
  justify-content: center;
  position: relative;
  z-index: 2;

  .toolbar {
    padding: 0;
    position: fixed;
    top: 0;
    background: #fff;
    display: flex;
    justify-content: center;
    height: 65px;

    .mat-grid-list {
      width: 100%;
      height: 100%;
      max-width: 1050px;

      /deep/ .mat-grid-tile {
        &:first-child {
          .mat-figure {
            justify-content: flex-start;
            padding-left: 15px;

            .logo {
              margin-top: 3px;
              margin-left: 1px;

              svg {
                transition: width 0.2s ease-in-out;
                width: 167px;
              }
            }
          }
        }

        &:last-child {
          overflow: initial;

          .mat-figure {
            justify-content: flex-end;

            .mat-button {
              font-weight: 400;
              font-size: 16px;
              background: none;
              padding-left: 12px;
              padding-right: 12px;
              transition: 0.2s ease all;

              .mat-list.sub-menu {
                padding-top: 8px;
                position: absolute;

                .mat-list.sub-menu-wrapper {
                  display: flex;
                  flex-direction: column;
                  padding: 16px;
                  background: #fff;
                  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 16px 0px;
                  border-width: 1px;
                  border-style: solid;
                  border-color: rgb(245, 245, 245);
                  border-image: initial;

                  .mat-list {
                    display: flex;
                    flex-direction: column;
                    flex-wrap: wrap;
                    max-height: 240px;
                  }

                  .mat-list-item {
                    font-size: 16px;
                    white-space: nowrap;
                    display: block;
                    padding: 0px 16px;
                    background: none;
                    border: 0;
                    text-align: left;
                    max-width: 200px;
                    height: 46px;
                    width: auto;

                    &:hover {
                      color: #00CC6F;
                      cursor: pointer;
                    }
                  }

                  .bottom-link {
                    margin: 16px;
                    text-align: left;
                    padding: 0;
                    text-decoration: underline;

                    &:hover {
                      color: #00CC6F;
                    }
                  }
                }
              }

              &.login {
                border: 1px solid;
                border-radius: 24px;
                color: #333;
                padding: 0px 24px;
                font-size: 16px;
                font-weight: 300;
                line-height: 34px;
                margin-left: 12px;
                margin-top: -1px;

                &:hover {
                  border-color: #A358DF;
                  background-color: transparent;
                  color: #A358DF;
                }
              }
            }
          }
        }
      }
    }
  }

  .navbar-padding {
    height: 65px;
  }

  .mobile-menu-toggle-button {
    display: none;
  }

  @media (max-width: 959px) {
    .top-menu {
      display: none;

      &.mobile-menu {
        display: block;
        position: absolute;
        width: 100vw !important;
        height: auto !important;
        left: 0 !important;
        top: 64px !important;
        background: #ff0476;

        /deep/ .mat-figure {
          position: relative;
          flex-direction: column;

          .mat-button {
            color: #fff;
            padding: 10px 0 !important;
            width: 100%;

            .mat-button-wrapper {
              font-size: 20px;
            }

            &.login {
              margin: 0 10px 10px;
              width: calc(100% - 20px);
            }
          }
        }
      }
    }

    .mobile-menu-toggle-button {
      display: flex;
      width: 65px;
      height: 65px;
      align-items: center;
      justify-content: center;

      /deep/ .mat-button-wrapper {
        width: 65px;
        height: 65px;
        display: flex;
        align-items: center;
        justify-content: center;

        .mat-icon {
          width: 40px;
          height: 40px;
          font-size: 40px;
        }
      }
    }
  }
}

